Adding in new pages

--- a/index.html
+++ b/index.html
@@ -1256,7 +1256,7 @@
 
       
       <div class="article-style">
-        <p align='justify'> <span style="color:gray"> Senior Engineer – State Estimation and Control at <a href="https://www.tih.iitb.ac.in/">Technology Innovation Hub for IoT and IoE (TIH-IoT), IIT-Bombay</a></span> <br> Implementation of autonomous navigation for ground robot
+        <p align='justify'> <span style="color:gray"> Senior Engineer – State Estimation and Control at <a href="https://www.tih.iitb.ac.in/">Technology Innovation Hub for IoT and IoE (TIH-IoT), IIT-Bombay</a></span> <br> Sensors-based mobile robot localization and obstacle avoidance.
       </div>
       
 
