--- a/research_projects/10_gnd_bot/index.html
+++ b/research_projects/10_gnd_bot/index.html
@@ -276,7 +276,7 @@
 
   
 
-<meta name="description" content="&lt;p align=&#39;justify&#39;&gt; &lt;span style=&#34;color:gray&#34;&gt; Senior Engineer – State Estimation and Control at &lt;a href=&#34;https://www.tih.iitb.ac.in/&#34;&gt;Technology Innovation Hub for IoT and IoE (TIH-IoT), IIT-Bombay&lt;/a&gt;&lt;/span&gt; &lt;br&gt; Implementation of autonomous navigation for ground robot &lt;/p&gt;" />
+<meta name="description" content="&lt;p align=&#39;justify&#39;&gt; &lt;span style=&#34;color:gray&#34;&gt; Senior Engineer – State Estimation and Control at &lt;a href=&#34;https://www.tih.iitb.ac.in/&#34;&gt;Technology Innovation Hub for IoT and IoE (TIH-IoT), IIT-Bombay&lt;/a&gt;&lt;/span&gt; &lt;br&gt; Sensors-based mobile robot localization and obstacle avoidance. &lt;/p&gt;" />
 
 
 
@@ -318,7 +318,7 @@
 <meta property="og:site_name" content="Dimple Bhuta" />
 <meta property="og:url" content="https://dimpleb0501.github.io/research_projects/10_gnd_bot/" />
 <meta property="og:title" content="&lt;p align=&#39;justify&#39;&gt; Autonomous navigation for ground robot&lt;/p&gt; | Dimple Bhuta" />
-<meta property="og:description" content="&lt;p align=&#39;justify&#39;&gt; &lt;span style=&#34;color:gray&#34;&gt; Senior Engineer – State Estimation and Control at &lt;a href=&#34;https://www.tih.iitb.ac.in/&#34;&gt;Technology Innovation Hub for IoT and IoE (TIH-IoT), IIT-Bombay&lt;/a&gt;&lt;/span&gt; &lt;br&gt; Implementation of autonomous navigation for ground robot &lt;/p&gt;" /><meta property="og:image" content="https://dimpleb0501.github.io/research_projects/10_gnd_bot/ground_robot.gif" /><meta property="og:locale" content="en-us" />
+<meta property="og:description" content="&lt;p align=&#39;justify&#39;&gt; &lt;span style=&#34;color:gray&#34;&gt; Senior Engineer – State Estimation and Control at &lt;a href=&#34;https://www.tih.iitb.ac.in/&#34;&gt;Technology Innovation Hub for IoT and IoE (TIH-IoT), IIT-Bombay&lt;/a&gt;&lt;/span&gt; &lt;br&gt; Sensors-based mobile robot localization and obstacle avoidance. &lt;/p&gt;" /><meta property="og:image" content="https://dimpleb0501.github.io/research_projects/10_gnd_bot/ground_robot.gif" /><meta property="og:locale" content="en-us" />
 
   
   
