--- a/project/11_sna/index.html
+++ b/project/11_sna/index.html
@@ -872,13 +872,19 @@
       <p align='justify'> Drones are actively used in precision agriculture with one of its major applications of spraying pesticides, herbicides, fertilizers, etc. in the agricultural field. The aim of this project is to develop a reliable sense and avoid technology to make UAV-based spraying completely autonomous.
 The major challenge in achieving autonomy is the requirement of flying low in an agricultural environment with lots of obstacles like trees, poles, cables, etc.
 <br>
-&emsp; Currently, as a senior engineer at <a href="https://www.tih.iitb.ac.in/">TIH, IIT-Bombay</a>, I am involved in the development of a robust obstacle avoidance algorithm,  as well as the evaluation and selection of a sensor suite capable of detecting common obstacles in the agricultural field. The figure below displays our implementation of LIDAR based obstacle avoidance algorithm.
+&emsp; As a senior engineer at <a href="https://www.tih.iitb.ac.in/">TIH, IIT-Bombay</a>, I led a team of engineers for the development of a robust obstacle detection and avoidance suite capable of navigating through common obstacles in the agricultural field. The figure below displays the functioning of our sense and avoid technology.
 <figure>
     <img src="sna_gif.gif"
          alt="obsavoid">
-    <figcaption>Figure: Tangent bug obstacle avoidance implemented in simulated agricultural field </figcaption>
+    <figcaption>Figure: Obstacle detection and avoidance in Gymkhana ground, IIT Bombay</figcaption>
 </figure>
-<p> Currently, we are working on testing the obstacle avoidance algorithm for different edge cases and outputting a trajectory that maximizes spraying in the marked area. As well as replacing LIDAR with our selected sensor suite.</p>
+<p>In collaboration with General Aeronautics (GA), Bangalore, we tested our technology on different scenarios.</p>
+<ul>
+<li>Trees of different shapes and sizes,</li>
+<li>Detection and avoidance at different heights,</li>
+<li>Detection and avoidance for multiple obstacles.</li>
+</ul>
+<p>We have successfully tested our implementation in the presence of dust and high winds. Currently, we are working towards modifying the avoidance algorithm to maximize spraying in the marked area in the agricultural field.</p>
 </p>
 
     </div>
