--- a/research_projects/index.html
+++ b/research_projects/index.html
@@ -919,7 +919,7 @@
     
     <a href="/research_projects/10_gnd_bot/"  class="summary-link">
       <div class="article-style">
-        <p align='justify'> <span style="color:gray"> Senior Engineer – State Estimation and Control at <a href="https://www.tih.iitb.ac.in/">Technology Innovation Hub for IoT and IoE (TIH-IoT), IIT-Bombay</a></span> <br> Implementation of autonomous navigation for ground robot
+        <p align='justify'> <span style="color:gray"> Senior Engineer – State Estimation and Control at <a href="https://www.tih.iitb.ac.in/">Technology Innovation Hub for IoT and IoE (TIH-IoT), IIT-Bombay</a></span> <br> Sensors-based mobile robot localization and obstacle avoidance.
       </div>
     </a>
     
