--- a/project/11_sna/index.html
+++ b/project/11_sna/index.html
@@ -780,7 +780,7 @@
   <h1>Obstacle detection and collision avoidance for multi-rotor UAV</h1>
 
   
-  <p class="page-subtitle"><p align='justify'> <span style="color:gray"> <b> Position </b> - Senior Engineer – State Estimation and Control at <a href="https://www.tih.iitb.ac.in/">Technology Innovation Hub for IoT and IoE (TIH-IoT), IIT-Bombay </a>  </span> <br> <b> Technical skills </b> - Python, Robot operating system (ROS), Gazebo</p>
+  <p class="page-subtitle"><p align='justify'> <span style="color:gray"> <b> Position </b> - Senior Engineer – State Estimation and Control at <a href="https://www.tih.iitb.ac.in/">Technology Innovation Hub for IoT and IoE (TIH-IoT), IIT-Bombay </a>  </span> <br> <b> Technical skills </b> - Python, Robot operating system (ROS), MAVROS, SITL (Ardupilot + Gazebo)</p>
   
 
   
