Modified webpage for obs avoid

--- a/project/10_gnd_bot/index.html
+++ b/project/10_gnd_bot/index.html
@@ -276,7 +276,7 @@
 
   
 
-<meta name="description" content="To achieve autonomous navigation for ground robot, I was involved in development of, - Raspberry Pi Pico based lower level controller, - Sensor fusion for robot localization, - Velocity controller design for lidar based obstacle avoidance." />
+<meta name="description" content="To achieve autonomous navigation for ground robot, I was involved in the development of, Encoder-based low-level controller developed with Raspberry Pi Pico, Sensor fusion for robot localization using encoders and orientation sensors, Velocity controller design for lidar-based obstacle avoidance using jetson orin nano." />
 
 
 
@@ -319,7 +319,7 @@
 <meta property="og:site_name" content="Dimple Bhuta" />
 <meta property="og:url" content="https://dimpleb0501.github.io/project/10_gnd_bot/" />
 <meta property="og:title" content="Autonomous navigation for ground robot | Dimple Bhuta" />
-<meta property="og:description" content="To achieve autonomous navigation for ground robot, I was involved in development of, - Raspberry Pi Pico based lower level controller, - Sensor fusion for robot localization, - Velocity controller design for lidar based obstacle avoidance." /><meta property="og:image" content="https://dimpleb0501.github.io/media/icon_huc013f98525804727a490388fa39763f6_9972_512x512_fill_q75_lanczos_center.jpg" /><meta property="og:locale" content="en-us" />
+<meta property="og:description" content="To achieve autonomous navigation for ground robot, I was involved in the development of, Encoder-based low-level controller developed with Raspberry Pi Pico, Sensor fusion for robot localization using encoders and orientation sensors, Velocity controller design for lidar-based obstacle avoidance using jetson orin nano." /><meta property="og:image" content="https://dimpleb0501.github.io/media/icon_huc013f98525804727a490388fa39763f6_9972_512x512_fill_q75_lanczos_center.jpg" /><meta property="og:locale" content="en-us" />
 
   
   
@@ -365,7 +365,7 @@
       "url": "https://dimpleb0501.github.io/media/icon_huc013f98525804727a490388fa39763f6_9972_192x192_fill_q75_lanczos_center.jpg"
     }
   },
-  "description": "To achieve autonomous navigation for ground robot, I was involved in development of, - Raspberry Pi Pico based lower level controller, - Sensor fusion for robot localization, - Velocity controller design for lidar based obstacle avoidance."
+  "description": "To achieve autonomous navigation for ground robot, I was involved in the development of, Encoder-based low-level controller developed with Raspberry Pi Pico, Sensor fusion for robot localization using encoders and orientation sensors, Velocity controller design for lidar-based obstacle avoidance using jetson orin nano."
 }
 </script>
 
@@ -869,18 +869,30 @@
   <div class="article-container">
 
     <div class="article-style">
-      <p align='justify'> To achieve autonomous navigation for ground robot, I was involved in development of,
-- Raspberry Pi Pico based lower level controller,
-- Sensor fusion for robot localization,
-- Velocity controller design for lidar based obstacle avoidance.
-<br>
-&emsp;
+      <p align='justify'> To achieve autonomous navigation for ground robot, I was involved in the development of, <br/>
+<ul>
+<li>Encoder-based low-level controller developed with Raspberry Pi Pico,</li>
+<li>Sensor fusion for robot localization using encoders and orientation sensors,</li>
+<li>Velocity controller design for lidar-based obstacle avoidance using jetson orin nano.</li>
+</ul>
 <figure>
     <img src="ground_robot.gif"
          alt="gnd_bot">
     <figcaption>Figure: Autonomous navigation and avoidance for ground robot </figcaption>
 </figure>
-<p>  The  .</p>
+<div style="clear: both;">
+  <div style="float: right; margin-left 1em; margin-top: -40px">
+  <figure>
+      <img src="turtlebot.gif"
+           alt="detect object"
+           width="300">
+      <figcaption>Figure 2: Robotic arm grasping household objects </figcaption>
+  </figure>  
+  </div>
+  <div>
+  <p align='justify'> The aim of this project was the development of a prototype rover that can be scaled up and used in the vineyard for data collection. Parallely we tested the velocity controller on turtlebot to validate obstacle avoidance performance.  
+  </p>
+  </div>
 </p>
 
     </div>
