--- a/project/11_sna/index.html
+++ b/project/11_sna/index.html
@@ -881,9 +881,28 @@ The major challenge in achieving autonomy is the requirement of flying low in an
 <p>In collaboration with General Aeronautics (GA), Bangalore, we tested our technology on different scenarios.</p>
 <ul>
 <li>Trees of different shapes and sizes,</li>
+</ul>
+<figure>
+    <img src="slide2.gif"
+         alt="div_trees">
+    <figcaption>Figure: Sensing and avoidance for diverse trees </figcaption>
+</figure>
+<ul>
 <li>Detection and avoidance at different heights,</li>
+</ul>
+<figure>
+    <img src="slide3.gif"
+         alt="heights">
+    <figcaption>Figure: Sensing and avoidance at different heights </figcaption>
+</figure>
+<ul>
 <li>Detection and avoidance for multiple obstacles.</li>
 </ul>
+<figure>
+    <img src="slide4.gif"
+         alt="multiobs">
+    <figcaption>Figure: Sensing and avoidance for multiple obstacles </figcaption>
+</figure>
 <p>We have successfully tested our implementation in the presence of dust and high winds. Currently, we are working towards modifying the avoidance algorithm to maximize spraying in the marked area in the agricultural field.</p>
 </p>
 
