--- a/project/index.html
+++ b/project/index.html
@@ -892,7 +892,7 @@
     
     <a href="/project/10_gnd_bot/"  class="summary-link">
       <div class="article-style">
-        To achieve autonomous navigation for ground robot, I was involved in development of, - Raspberry Pi Pico based lower level controller, - Sensor fusion for robot localization, - Velocity controller design for lidar based obstacle avoidance.
+        To achieve autonomous navigation for ground robot, I was involved in the development of, Encoder-based low-level controller developed with Raspberry Pi Pico, Sensor fusion for robot localization using encoders and orientation sensors, Velocity controller design for lidar-based obstacle avoidance using jetson orin nano.
       </div>
     </a>
     
