--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!-- This site was created with Wowchemy. https://www.wowchemy.com -->
-<!-- Last Published: May 22, 2024 --><html lang="en-us" >
+<!-- Last Published: May 24, 2024 --><html lang="en-us" >
 
 
 <head>
@@ -852,7 +852,7 @@
 
         <h2>Dimple Bhuta</h2>
 
-        <h3>Senior Engineer – State Estimation and Control</h3>
+        <h3>Principal Engineer – State Estimation and Control</h3>
 
 
         <h3>
@@ -942,7 +942,7 @@
 
     <div class="article-style">
       <h3 id="biography">Biography</h3>
-<p style="text-align: justify;">I have a MSc in Biomedical engineering, BE in electronics engineering and over 8 years of research experience in the fields of robotics and computer vision. I am currently working as a Senior Engineer at TiH-IoT, IIT Bombay in the robotics group.</p>
+<p style="text-align: justify;">I have a MSc in Biomedical engineering, BE in electronics engineering and over 8 years of research experience in the fields of robotics and computer vision. I am currently working as a Principal Engineer at TiH-IoT, IIT Bombay in the robotics group.</p>
 
     </div>
 
@@ -1200,7 +1200,7 @@
 
 
 
-  <a class="btn btn-outline-primary btn-page-header" href="https://youtu.be/qZ9UOIuV2Aw" target="_blank" rel="noopener">
+  <a class="btn btn-outline-primary btn-page-header" href="https://youtu.be/gsgtN97lZYo" target="_blank" rel="noopener">
     <i class="fas fa-YouTube mr-1"></i>YouTube</a>
 
 
@@ -1680,7 +1680,7 @@
 
 
       <div class="article-style">
-        <p align='justify'> <span style="color:gray"> Drone and Robotics Engineer at  <a href="http://www.drishti.works/"> Dhristi works</a> </span>. <br> Worked on implementation of motion planning algorithms for a manipulator with an intended application of beach cleaning.
+        <p align='justify'> <span style="color:gray"> Drone and Robotics Engineer at  <a href="http://www.drishti.works/"> Dhristi works</a> </span> <br> Worked on implementation of motion planning algorithms for a manipulator with an intended application of beach cleaning.
       </div>
 
 
@@ -2259,7 +2259,7 @@
 
 
 
-          <img src="/research_projects/8_pattern_rec/pattern.gif" height="304" width="540"
+          <img src="/research_projects/8_pattern_rec/pattern_rec.gif" height="304" width="540"
               alt="&lt;p align=&#39;justify&#39;&gt;Pattern recognition based prosthetic arm&lt;/p&gt;" loading="lazy">
 
 
