--- a/project/10_gnd_bot/index.html
+++ b/project/10_gnd_bot/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!-- This site was created with Wowchemy. https://www.wowchemy.com -->
-<!-- Last Published: May 22, 2024 --><html lang="en-us" >
+<!-- Last Published: May 24, 2024 --><html lang="en-us" >
 
 
 <head>
@@ -886,7 +886,7 @@
       <img src="turtlebot.gif"
            alt="detect object"
            width="300">
-      <figcaption>Figure 2: Robotic arm grasping household objects </figcaption>
+      <figcaption>Figure 2: Obstacle avoidance with turtlebot </figcaption>
   </figure>  
   </div>
   <div>
@@ -935,7 +935,7 @@
 
     <div class="media-body">
       <h5 class="card-title"><a href="https://dimpleb0501.github.io/">Dimple Bhuta</a></h5>
-      <h6 class="card-subtitle">Senior Engineer – State Estimation and Control</h6>
+      <h6 class="card-subtitle">Principal Engineer – State Estimation and Control</h6>
       <p class="card-text">My research interests include robotics, computer vision and bio-inspired design.</p>
       <ul class="network-icon" aria-hidden="true">
   
