--- a/project/11_sna/index.html
+++ b/project/11_sna/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!-- This site was created with Wowchemy. https://www.wowchemy.com -->
-<!-- Last Published: May 22, 2024 --><html lang="en-us" >
+<!-- Last Published: May 24, 2024 --><html lang="en-us" >
 
 
 <head>
@@ -883,7 +883,7 @@ The major challenge in achieving autonomy is the requirement of flying low in an
 <li>Trees of different shapes and sizes,</li>
 </ul>
 <figure>
-    <img src="slide2.gif"
+    <img src="slide_2.gif"
          alt="div_trees">
     <figcaption>Figure: Sensing and avoidance for diverse trees </figcaption>
 </figure>
@@ -891,7 +891,7 @@ The major challenge in achieving autonomy is the requirement of flying low in an
 <li>Detection and avoidance at different heights,</li>
 </ul>
 <figure>
-    <img src="slide3.gif"
+    <img src="slide_3.gif"
          alt="heights">
     <figcaption>Figure: Sensing and avoidance at different heights </figcaption>
 </figure>
@@ -899,7 +899,7 @@ The major challenge in achieving autonomy is the requirement of flying low in an
 <li>Detection and avoidance for multiple obstacles.</li>
 </ul>
 <figure>
-    <img src="slide4.gif"
+    <img src="slide_4.gif"
          alt="multiobs">
     <figcaption>Figure: Sensing and avoidance for multiple obstacles </figcaption>
 </figure>
@@ -946,7 +946,7 @@ The major challenge in achieving autonomy is the requirement of flying low in an
 
     <div class="media-body">
       <h5 class="card-title"><a href="https://dimpleb0501.github.io/">Dimple Bhuta</a></h5>
-      <h6 class="card-subtitle">Senior Engineer – State Estimation and Control</h6>
+      <h6 class="card-subtitle">Principal Engineer – State Estimation and Control</h6>
       <p class="card-text">My research interests include robotics, computer vision and bio-inspired design.</p>
       <ul class="network-icon" aria-hidden="true">
   
