--- a/research_projects/11_obs_avoid/index.html
+++ b/research_projects/11_obs_avoid/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!-- This site was created with Wowchemy. https://www.wowchemy.com -->
-<!-- Last Published: May 22, 2024 --><html lang="en-us" >
+<!-- Last Published: May 24, 2024 --><html lang="en-us" >
 
 
 <head>
@@ -831,7 +831,7 @@
   
     
   
-  <a class="btn btn-outline-primary btn-page-header" href="https://youtu.be/qZ9UOIuV2Aw" target="_blank" rel="noopener">
+  <a class="btn btn-outline-primary btn-page-header" href="https://youtu.be/gsgtN97lZYo" target="_blank" rel="noopener">
     <i class="fas fa-YouTube mr-1"></i>YouTube</a>
 
 
@@ -1004,7 +1004,7 @@
 
     <div class="media-body">
       <h5 class="card-title"><a href="https://dimpleb0501.github.io/">Dimple Bhuta</a></h5>
-      <h6 class="card-subtitle">Senior Engineer – State Estimation and Control</h6>
+      <h6 class="card-subtitle">Principal Engineer – State Estimation and Control</h6>
       <p class="card-text">My research interests include robotics, computer vision and bio-inspired design.</p>
       <ul class="network-icon" aria-hidden="true">
   
