--- a/research_projects/3_prog_manipulator/index.html
+++ b/research_projects/3_prog_manipulator/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!-- This site was created with Wowchemy. https://www.wowchemy.com -->
-<!-- Last Published: May 22, 2024 --><html lang="en-us" >
+<!-- Last Published: May 24, 2024 --><html lang="en-us" >
 
 
 <head>
@@ -276,7 +276,7 @@
 
   
 
-<meta name="description" content="&lt;p align=&#39;justify&#39;&gt; &lt;span style=&#34;color:gray&#34;&gt; Drone and Robotics Engineer at  &lt;a href=&#34;http://www.drishti.works/&#34;&gt; Dhristi works&lt;/a&gt; &lt;/span&gt;. &lt;br&gt; Worked on implementation of motion planning algorithms for a manipulator with an intended application of beach cleaning. &lt;/p&gt;" />
+<meta name="description" content="&lt;p align=&#39;justify&#39;&gt; &lt;span style=&#34;color:gray&#34;&gt; Drone and Robotics Engineer at  &lt;a href=&#34;http://www.drishti.works/&#34;&gt; Dhristi works&lt;/a&gt; &lt;/span&gt; &lt;br&gt; Worked on implementation of motion planning algorithms for a manipulator with an intended application of beach cleaning. &lt;/p&gt;" />
 
 
 
@@ -318,7 +318,7 @@
 <meta property="og:site_name" content="Dimple Bhuta" />
 <meta property="og:url" content="https://dimpleb0501.github.io/research_projects/3_prog_manipulator/" />
 <meta property="og:title" content="&lt;p align=&#39;justify&#39;&gt; Programming robotic manipulator for pick and place task &lt;/p&gt; | Dimple Bhuta" />
-<meta property="og:description" content="&lt;p align=&#39;justify&#39;&gt; &lt;span style=&#34;color:gray&#34;&gt; Drone and Robotics Engineer at  &lt;a href=&#34;http://www.drishti.works/&#34;&gt; Dhristi works&lt;/a&gt; &lt;/span&gt;. &lt;br&gt; Worked on implementation of motion planning algorithms for a manipulator with an intended application of beach cleaning. &lt;/p&gt;" /><meta property="og:image" content="https://dimpleb0501.github.io/research_projects/3_prog_manipulator/picknplace.gif" /><meta property="og:locale" content="en-us" />
+<meta property="og:description" content="&lt;p align=&#39;justify&#39;&gt; &lt;span style=&#34;color:gray&#34;&gt; Drone and Robotics Engineer at  &lt;a href=&#34;http://www.drishti.works/&#34;&gt; Dhristi works&lt;/a&gt; &lt;/span&gt; &lt;br&gt; Worked on implementation of motion planning algorithms for a manipulator with an intended application of beach cleaning. &lt;/p&gt;" /><meta property="og:image" content="https://dimpleb0501.github.io/research_projects/3_prog_manipulator/picknplace.gif" /><meta property="og:locale" content="en-us" />
 
   
   
@@ -1004,7 +1004,7 @@
 
     <div class="media-body">
       <h5 class="card-title"><a href="https://dimpleb0501.github.io/">Dimple Bhuta</a></h5>
-      <h6 class="card-subtitle">Senior Engineer – State Estimation and Control</h6>
+      <h6 class="card-subtitle">Principal Engineer – State Estimation and Control</h6>
       <p class="card-text">My research interests include robotics, computer vision and bio-inspired design.</p>
       <ul class="network-icon" aria-hidden="true">
   
