feat: added multispectral section

--- a/project/12_spectral/index.html
+++ b/project/12_spectral/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!-- This site was created with Wowchemy. https://www.wowchemy.com -->
-<!-- Last Published: April 14, 2025 --><html lang="en-us" >
+<!-- Last Published: April 15, 2025 --><html lang="en-us" >
 
 
 <head>
@@ -276,7 +276,7 @@
 
   
 
-<meta name="description" content="Drones are actively used in precision agriculture with one of its major applications of spraying pesticides, herbicides, fertilizers, etc. in the agricultural field. The aim of this project is to develop a reliable sense and avoid technology to make UAV-based spraying completely autonomous." />
+<meta name="description" content="&lt;!DOCTYPE html&gt; Drones equipped with multispectral cameras offer a powerful, non-invasive method for capturing high-resolution spectral data across large and inaccessible areas. These systems enable early detection of surface anomalies and plant stress by analyzing reflectance patterns beyond the visible spectrum." />
 
 
 
@@ -319,7 +319,7 @@
 <meta property="og:site_name" content="Dimple Bhuta" />
 <meta property="og:url" content="https://dimpleb0501.github.io/project/12_spectral/" />
 <meta property="og:title" content="Multispectral Image Acquisition &amp; Data Inference using UAVs | Dimple Bhuta" />
-<meta property="og:description" content="Drones are actively used in precision agriculture with one of its major applications of spraying pesticides, herbicides, fertilizers, etc. in the agricultural field. The aim of this project is to develop a reliable sense and avoid technology to make UAV-based spraying completely autonomous." /><meta property="og:image" content="https://dimpleb0501.github.io/media/icon_huc013f98525804727a490388fa39763f6_9972_512x512_fill_q75_lanczos_center.jpg" /><meta property="og:locale" content="en-us" />
+<meta property="og:description" content="&lt;!DOCTYPE html&gt; Drones equipped with multispectral cameras offer a powerful, non-invasive method for capturing high-resolution spectral data across large and inaccessible areas. These systems enable early detection of surface anomalies and plant stress by analyzing reflectance patterns beyond the visible spectrum." /><meta property="og:image" content="https://dimpleb0501.github.io/media/icon_huc013f98525804727a490388fa39763f6_9972_512x512_fill_q75_lanczos_center.jpg" /><meta property="og:locale" content="en-us" />
 
   
   
@@ -365,7 +365,7 @@
       "url": "https://dimpleb0501.github.io/media/icon_huc013f98525804727a490388fa39763f6_9972_192x192_fill_q75_lanczos_center.jpg"
     }
   },
-  "description": "Drones are actively used in precision agriculture with one of its major applications of spraying pesticides, herbicides, fertilizers, etc. in the agricultural field. The aim of this project is to develop a reliable sense and avoid technology to make UAV-based spraying completely autonomous."
+  "description": "\u003c!DOCTYPE html\u003e Drones equipped with multispectral cameras offer a powerful, non-invasive method for capturing high-resolution spectral data across large and inaccessible areas. These systems enable early detection of surface anomalies and plant stress by analyzing reflectance patterns beyond the visible spectrum."
 }
 </script>
 
@@ -780,7 +780,7 @@
   <h1>Multispectral Image Acquisition &amp; Data Inference using UAVs</h1>
 
   
-  <p class="page-subtitle"><p align='justify'> <span style="color:gray"> <b> Position </b> - Senior Engineer – State Estimation and Control at <a href="https://www.tih.iitb.ac.in/">Technology Innovation Hub for IoT and IoE (TIH-IoT), IIT-Bombay </a>  </span> <br> <b> Technical skills </b> - Python, Robot operating system (ROS), MAVROS, SITL (Ardupilot + Gazebo)</p>
+  <p class="page-subtitle"><p align='justify'> <span style="color:gray"> <b> Position </b> - Principal Engineer – State Estimation and Control at <a href="https://www.tih.iitb.ac.in/">Technology Innovation Hub for IoT and IoE (TIH-IoT), IIT-Bombay </a>  </span> <br> <b> Technical skills </b> - Python, Pytorch, Multispectral Imaging, Vegetation Indices, Deep learning, Machine learning</p>
   
 
   
@@ -822,25 +822,110 @@
   <div class="article-container">
 
     <div class="article-style">
-      <p align='justify'> Drones are actively used in precision agriculture with one of its major applications of spraying pesticides, herbicides, fertilizers, etc. in the agricultural field. The aim of this project is to develop a reliable sense and avoid technology to make UAV-based spraying completely autonomous.
-The major challenge in achieving autonomy is the requirement of flying low in an agricultural environment with lots of obstacles like trees, poles, cables, etc.
-<br>
-&emsp; As a senior engineer at <a href="https://www.tih.iitb.ac.in/">TIH, IIT-Bombay</a>, I led a team of engineers for the development of a robust obstacle detection and avoidance suite capable of navigating through common obstacles in the agricultural field. The figure below displays the functioning of our sense and avoid technology.
-<figure>
-    <img src="sna_gif.gif"
-         alt="obsavoid">
-    <figcaption>Figure: Obstacle detection and avoidance in Gymkhana ground, IIT Bombay</figcaption>
-</figure>
-<p>In collaboration with General Aeronautics (GA), Bangalore, we tested our technology on different scenarios.</p>
-<ul>
-<li>Trees of different shapes and sizes,</li>
-</ul>
-<figure>
-    <img src="slide_2.gif"
-         alt="div_trees">
-    <figcaption>Figure: Sensing and avoidance for diverse trees </figcaption>
-</figure>
-</p>
+      <!DOCTYPE html>
+<html>
+<head>
+  <style>
+    .section {
+      padding: 20px;
+    }
+<pre><code>.bg-yellow {
+  background-color: #fff9c4; /* Light yellow */
+}
+
+.bg-green {
+  background-color: #effcc7; /* Light green */
+}
+.bg-blue {
+  background-color: #faf9e3; /* Light green */
+}
+
+hr {
+  border: none;
+  height: 2px;
+  background-color: #ccc;
+  margin: 0;
+}
+</code></pre>
+<p></style></p>
+</head>
+<body>
+    <p>
+        Drones equipped with multispectral cameras offer a powerful, non-invasive method for capturing high-resolution spectral data across large and inaccessible areas. These systems enable early detection of surface anomalies and plant stress by analyzing reflectance patterns beyond the visible spectrum.
+    </p>
+    <p>
+        I am currently leading a team focused on multispectral data acquisition and AI-based inferencing for two critical projects:
+    </p>
+    <ol>
+        <li><strong>Surface Detection of Oil and Water from Underground Pipelines</strong> – Utilizing spectral analysis to detect oil leaks and water contamination on the surface, supporting early intervention and environmental protection.</li>
+        <li><strong>AI-Based Farm Advisory System for Onion Cultivation</strong> – Applying drone phenotyping to monitor plant health, detect stress conditions like thrips and anthracnose, and provide yield predictions to assist farmers via the iSaarthi mobile platform.</li>
+    </ol>
+    <p>
+        These projects aim to solve real-world challenges in infrastructure safety and precision agriculture using drone-enabled multispectral intelligence.
+    </p>
+  <hr>
+  <div class="section bg-blue">
+        <h1>Surface Detection of Oil and Water from Underground Pipelines</h1>
+        <p>
+            This project, in collaboration with HPCL, IOCL, and GAIL, focuses on detecting surface signatures of oil and water leaks originating from underground pipelines using multispectral imaging and AI-based analysis.
+        </p>
+        <h2>Problem Statement: Pilferage Detection</h2>
+        <p>
+            A significant challenge faced by oil and gas companies is the undetected pilferage and leakage of oil from underground pipelines. Early surface-level detection can prevent environmental damage, operational downtime, and economic losses.
+        </p>
+        <figure>
+            <img src="oil_leakage_problem_statement.png" alt="oilvswater" style="max-width:100%; height:auto;">
+            <figcaption>Figure: Multispectral image analysis for oil vs water pipeline </figcaption>
+        </figure>
+        <h2>Preliminary Spectral Analysis</h2>
+        <p>
+            Initial analysis focused on identifying spectral bands that effectively distinguish between oil and water on soil and vegetation. Multispectral imaging helped isolate key wavelengths where oil and water show distinct reflectance patterns.
+        </p>
+        <figure>
+            <img src="oilvswater.png" alt="oilvswater" style="max-width:100%; height:auto;">
+            <figcaption>Figure: Spectral band comparison of oil and water</figcaption>
+        </figure>
+        <h2>Dataset Creation and Model Development</h2>
+    <p>
+        A custom multispectral dataset was created under controlled conditions using varying quantities of oil, water, and vegetation. This comprehensive dataset enabled the training of a robust deep learning model based on the YOLOv8 architecture. The model achieved an accuracy of <strong>92.9%</strong> for oil detection and <strong>96%</strong> for water detection, showcasing strong performance in surface leak classification tasks.
+    </p>
+    <h2>Phase 2: Real-World Deployment</h2>
+    <p>
+        In the second phase of the project, we plan to augment the current dataset with real-world data collected from actual pipeline leakage sites, in collaboration with industry partners such as IOCL, HPCL, and GAIL. This phase aims to validate and improve the model's performance under diverse environmental and terrain conditions. Field data will include site-specific spectral signatures, soil types, and contamination patterns to ensure the model generalizes well to operational settings.
+    </p>
+    <p>
+        In parallel, comparative benchmarking against other state-of-the-art deep learning algorithms is ongoing, and the results will contribute to a scientific publication currently under development.
+    </p>
+  </div>
+  <hr>
+  <div class="section bg-yellow">
+    <p></p>
+  </div>
+  <hr>
+  <div class="section bg-green">
+  <h1>AI-Based Farm Advisory System for Onion Cultivation</h1>
+    <p>
+        In collaboration with ICAR-DOGR (Indian Council of Agricultural Research - Directorate of Onion and Garlic Research),
+        this project focuses on developing an AI-powered farm advisory system tailored for onion farming. Leveraging
+        multispectral imaging and advanced machine learning models, the system aims to detect various forms of
+        plant stress including thrips infestation, anthracnose disease, and water drought conditions.
+        It also incorporates yield prediction models for improved crop management.
+    </p>
+    <p>
+        The ultimate goal is to integrate drone-based phenotyping with the iSaarthi mobile application,
+        which aggregates data from ground control stations, onboard agro-sensors, and
+        mobile imagery captured by farmers. This fusion of aerial and ground-level data supports
+        real-time, location-specific advisories to empower farmers with actionable insights.
+    </p>
+    <figure>
+        <img src="DOGR-project.png"
+             alt="DOGR">
+        <figcaption>Figure: AI-based farm advisory system pipeline </figcaption>
+    </figure>
+  </div>
+  <hr>
+</body>
+</html>
 
     </div>
 
