--- a/project/index.html
+++ b/project/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!-- This site was created with Wowchemy. https://www.wowchemy.com -->
-<!-- Last Published: April 14, 2025 --><html lang="en-us" >
+<!-- Last Published: April 15, 2025 --><html lang="en-us" >
 
 
 <head>
@@ -1542,7 +1542,7 @@
     
     <a href="/project/12_spectral/"  class="summary-link">
       <div class="article-style">
-        Drones are actively used in precision agriculture with one of its major applications of spraying pesticides, herbicides, fertilizers, etc. in the agricultural field. The aim of this project is to develop a reliable sense and avoid technology to make UAV-based spraying completely autonomous.
+        <!DOCTYPE html> Drones equipped with multispectral cameras offer a powerful, non-invasive method for capturing high-resolution spectral data across large and inaccessible areas. These systems enable early detection of surface anomalies and plant stress by analyzing reflectance patterns beyond the visible spectrum.
       </div>
     </a>
     
