--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!-- This site was created with Wowchemy. https://www.wowchemy.com -->
-<!-- Last Published: April 14, 2025 --><html lang="en-us" >
+<!-- Last Published: April 15, 2025 --><html lang="en-us" >
 
 
 <head>
@@ -1199,7 +1199,7 @@
 
 
 
-          <img src="/research_projects/12_multispectral/multi_main_page_hu2567b7cc90ec444eeb106e3b9273abd9_182970_540x0_resize_q75_h2_lanczos_3.webp" height="530" width="540"
+          <img src="/research_projects/12_multispectral/multi_main_page_hu31f8b8fd9c69d252090e4446a4218edc_182935_540x0_resize_q75_h2_lanczos_3.webp" height="581" width="540"
               alt="&lt;p align=&#39;justify&#39;&gt; Multispectral Image Acquisition &amp; Data Inference using UAVs &lt;/p&gt;" loading="lazy">
 
 
@@ -1267,9 +1267,6 @@
 
 
 
-  <a class="btn btn-outline-primary btn-page-header" href="/project/11_sna/">
-    Project
-  </a>
 
 
 
@@ -1280,6 +1277,17 @@
 
 
 
+
+
+
+
+
+
+
+
+
+  <a class="btn btn-outline-primary btn-page-header" href="https://sense-and-avoid.github.io/" target="_blank" rel="noopener">
+    <i class="fas fa-link mr-1"></i>Website</a>
 
 
 
