--- a/research_projects/11_obs_avoid/index.html
+++ b/research_projects/11_obs_avoid/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!-- This site was created with Wowchemy. https://www.wowchemy.com -->
-<!-- Last Published: April 14, 2025 --><html lang="en-us" >
+<!-- Last Published: April 15, 2025 --><html lang="en-us" >
 
 
 <head>
@@ -805,20 +805,28 @@
 
 
 
+
+
+
+
+
+
+
+
+
   
-  <a class="btn btn-outline-primary btn-page-header" href="/project/11_sna/">
-    Project
-  </a>
   
-
-
-
-
-
-
-
-
-
+  
+    
+  
+  
+  
+  
+  
+    
+  
+  <a class="btn btn-outline-primary btn-page-header" href="https://sense-and-avoid.github.io/" target="_blank" rel="noopener">
+    <i class="fas fa-link mr-1"></i>Website</a>
 
   
   
