--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!-- This site was created with Wowchemy. https://www.wowchemy.com -->
-<!-- Last Published: April 15, 2025 --><html lang="en-us" >
+<!-- Last Published: April 17, 2025 --><html lang="en-us" >
 
 
 <head>
@@ -942,7 +942,7 @@
 
     <div class="article-style">
       <h3 id="biography">Biography</h3>
-<p style="text-align: justify;">I have a MSc in Biomedical engineering, BE in electronics engineering and over 8 years of research experience in the fields of robotics and computer vision. I am currently working as a Principal Engineer at TiH-IoT, IIT Bombay in the robotics group.</p>
+<p style="text-align: justify;">I have a MSc in Biomedical engineering, BE in electronics engineering and over 9 years of research experience in the fields of robotics and computer vision. I am currently working as a Principal Engineer at TiH-IoT, IIT Bombay in the robotics group.</p>
 
     </div>
 
@@ -971,7 +971,7 @@
           <li>
             <i class="fa-li fas fa-graduation-cap"></i>
             <div class="description">
-              <p class="course">Master of Science in Biomedical Engineering, GPA:3.828/4.000 (Top 10 % in class), 2012</p>
+              <p class="course">Master of Science in Biomedical Engineering, GPA:3.828/4.000 (Top 12 % in class), 2012</p>
               <p class="institution">Virginia Common Wealth University, USA</p>
             </div>
           </li>
@@ -1199,7 +1199,7 @@
 
 
 
-          <img src="/research_projects/12_multispectral/multi_main_page_hu31f8b8fd9c69d252090e4446a4218edc_182935_540x0_resize_q75_h2_lanczos_3.webp" height="581" width="540"
+          <img src="/research_projects/12_multispectral/multi_main_page_hufdd645727d51b6583a8a2af5caded67d_200386_540x0_resize_q75_h2_lanczos_3.webp" height="305" width="540"
               alt="&lt;p align=&#39;justify&#39;&gt; Multispectral Image Acquisition &amp; Data Inference using UAVs &lt;/p&gt;" loading="lazy">
 
 
@@ -1737,7 +1737,7 @@
 
 
 
-          <img src="/research_projects/2_obj_det_track/obj_track.gif" height="405" width="540"
+          <img src="/research_projects/2_obj_det_track/obj_track.gif" height="304" width="540"
               alt="&lt;p align=&#39;justify&#39;&gt; Object detection and tracking &lt;/p&gt;" loading="lazy">
 
 
@@ -1843,7 +1843,7 @@
 
 
 
-          <img src="/research_projects/3_prog_manipulator/picknplace.gif" height="405" width="540"
+          <img src="/research_projects/3_prog_manipulator/picknplace.gif" height="304" width="540"
               alt="&lt;p align=&#39;justify&#39;&gt; Programming robotic manipulator for pick and place task &lt;/p&gt;" loading="lazy">
 
 
@@ -2161,7 +2161,7 @@
 
 
 
-          <img src="/research_projects/4_motion_robot/robot.gif" height="392" width="540"
+          <img src="/research_projects/4_motion_robot/robot.gif" height="304" width="540"
               alt="&lt;p align=&#39;justify&#39;&gt; Development of motion planning algorithms for robots &lt;/p&gt;" loading="lazy">
 
 
@@ -2720,6 +2720,112 @@
 <div class="col-lg-12 mb-5 view-showcase">
   <div class="row align-items-center">
     <div class="col-12 col-md-6">
+      <div class="section-subheading article-title mb-0 mt-0"><p align='justify'> Coordinated Multi-Robot Navigation using ROS2</div>
+
+
+      <div class="article-style">
+        <p align='justify'> In progress.
+      </div>
+
+
+      <div class="btn-links">
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+  <a class="btn btn-outline-primary btn-page-header" href="/project/f_lf/">
+    Project
+  </a>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+  <a class="btn btn-outline-primary btn-page-header" href="https://youtu.be/WXKy5rxV-dU" target="_blank" rel="noopener">
+    <i class="fas fa-YouTube mr-1"></i>YouTube</a>
+
+
+      </div>
+
+    </div>
+    <div class="col-12 col-md-6 order-first ">
+
+
+
+
+
+          <img src="/extra_project/6_leader_follower/lf.gif" height="304" width="540"
+              alt="&lt;p align=&#39;justify&#39;&gt; Coordinated Multi-Robot Navigation using ROS2 &lt;/p&gt;" loading="lazy">
+
+
+    </div>
+  </div>
+</div>
+
+      </div>
+
+
+
+          <div class="col-12 isotope-item js-id-robotics">
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<div class="col-lg-12 mb-5 view-showcase">
+  <div class="row align-items-center">
+    <div class="col-12 col-md-6">
       <div class="section-subheading article-title mb-0 mt-0"><p align='justify'> Waypoint following for a drive differential drive robot</div>
 
 
@@ -2787,7 +2893,7 @@
 
 
 
-          <img src="/extra_project/5_wps_following_2wd/wp.gif" height="616" width="540"
+          <img src="/extra_project/5_wps_following_2wd/wp.gif" height="304" width="540"
               alt="&lt;p align=&#39;justify&#39;&gt; Waypoint following for a drive differential drive robot &lt;/p&gt;" loading="lazy">
 
 
@@ -2907,7 +3013,7 @@
 
 
 
-          <img src="/extra_project/1_behavioralcloning/2_behclon.gif" height="360" width="540"
+          <img src="/extra_project/1_behavioralcloning/2_behclon.gif" height="304" width="540"
               alt="&lt;p align=&#39;justify&#39;&gt; Behavioral Cloning &lt;/p&gt;" loading="lazy">
 
 
@@ -3013,7 +3119,7 @@
 
 
 
-          <img src="/extra_project/3_facegen/face_gen_hu7fbb502e03c24641461dafa16c016e1f_58713_540x0_resize_q75_h2_lanczos_3.webp" height="141" width="540"
+          <img src="/extra_project/3_facegen/face_gen_hu7fbb502e03c24641461dafa16c016e1f_58713_720x2500_fit_q75_h2_lanczos_3.webp" height="304" width="540"
               alt="&lt;p align=&#39;justify&#39;&gt; Face generation &lt;/p&gt;" loading="lazy">
 
 
@@ -3239,7 +3345,7 @@
 
 
 
-          <img src="/extra_project/4_imagecapt/corr_pred_hu11c6ed2e41f3f01fe717a1e34a78c090_41920_540x0_resize_q75_h2_lanczos.webp" height="360" width="540"
+          <img src="/extra_project/4_imagecapt/corr_pred_hu11c6ed2e41f3f01fe717a1e34a78c090_41920_540x0_resize_q75_h2_lanczos.webp" height="304" width="540"
               alt="&lt;p align=&#39;justify&#39;&gt; Image captioning &lt;/p&gt;" loading="lazy">
 
 
