--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!-- This site was created with Wowchemy. https://www.wowchemy.com -->
-<!-- Last Published: April 17, 2025 --><html lang="en-us" >
+<!-- Last Published: April 21, 2025 --><html lang="en-us" >
 
 
 <head>
@@ -1146,7 +1146,7 @@
 <div class="col-lg-12 mb-5 view-showcase">
   <div class="row align-items-center">
     <div class="col-12 col-md-6">
-      <div class="section-subheading article-title mb-0 mt-0"><p align='justify'> Multispectral Image Acquisition & Data Inference using UAVs</div>
+      <div class="section-subheading article-title mb-0 mt-0"><p align='justify'> Multispectral Image Acquisition & Data Inference using UAV</div>
 
 
       <div class="article-style">
@@ -1199,8 +1199,8 @@
 
 
 
-          <img src="/research_projects/12_multispectral/multi_main_page_hufdd645727d51b6583a8a2af5caded67d_200386_540x0_resize_q75_h2_lanczos_3.webp" height="305" width="540"
-              alt="&lt;p align=&#39;justify&#39;&gt; Multispectral Image Acquisition &amp; Data Inference using UAVs &lt;/p&gt;" loading="lazy">
+          <img src="/research_projects/12_multispectral/multi_main_page_hufdd645727d51b6583a8a2af5caded67d_200386_540x0_resize_q75_h2_lanczos_3.webp" height="304" width="540"
+              alt="&lt;p align=&#39;justify&#39;&gt; Multispectral Image Acquisition &amp; Data Inference using UAV &lt;/p&gt;" loading="lazy">
 
 
     </div>
@@ -1238,7 +1238,7 @@
 <div class="col-lg-12 mb-5 view-showcase">
   <div class="row align-items-center">
     <div class="col-12 col-md-6">
-      <div class="section-subheading article-title mb-0 mt-0"><p align='justify'> Lightweight Sense-and-Avoid module for Low-Altitude UAVs in Agriculture</div>
+      <div class="section-subheading article-title mb-0 mt-0"><p align='justify'> Lightweight Smart Sense-and-Avoid Module for Low-Altitude Agricultural UAVs</div>
 
 
       <div class="article-style">
@@ -1314,7 +1314,7 @@
 
 
           <img src="/research_projects/11_obs_avoid/sna_gif.gif" height="304" width="540"
-              alt="&lt;p align=&#39;justify&#39;&gt; Lightweight Sense-and-Avoid module for Low-Altitude UAVs in Agriculture&lt;/p&gt;" loading="lazy">
+              alt="&lt;p align=&#39;justify&#39;&gt; Lightweight Smart Sense-and-Avoid Module for Low-Altitude Agricultural UAVs&lt;/p&gt;" loading="lazy">
 
 
     </div>
@@ -1352,7 +1352,7 @@
 <div class="col-lg-12 mb-5 view-showcase">
   <div class="row align-items-center">
     <div class="col-12 col-md-6">
-      <div class="section-subheading article-title mb-0 mt-0"><p align='justify'> Autonomous navigation for ground robot</div>
+      <div class="section-subheading article-title mb-0 mt-0"><p align='justify'> Encoder-Orientation Sensor Fusion for Ground Robot Navigation</div>
 
 
       <div class="article-style">
@@ -1420,7 +1420,7 @@
 
 
           <img src="/research_projects/10_gnd_bot/ground_robot.gif" height="304" width="540"
-              alt="&lt;p align=&#39;justify&#39;&gt; Autonomous navigation for ground robot&lt;/p&gt;" loading="lazy">
+              alt="&lt;p align=&#39;justify&#39;&gt; Encoder-Orientation Sensor Fusion for Ground Robot Navigation &lt;/p&gt;" loading="lazy">
 
 
     </div>
@@ -1458,7 +1458,7 @@
 <div class="col-lg-12 mb-5 view-showcase">
   <div class="row align-items-center">
     <div class="col-12 col-md-6">
-      <div class="section-subheading article-title mb-0 mt-0"><p align='justify'> Position estimation of a multi-rotor UAV using a depth camera</div>
+      <div class="section-subheading article-title mb-0 mt-0"><p align='justify'> Aerial Vehicle Localization Using a Downward-Facing Depth Camera for Precision Agriculture</div>
 
 
       <div class="article-style">
@@ -1526,7 +1526,7 @@
 
 
           <img src="/research_projects/9_flvis/flvis.gif" height="304" width="540"
-              alt="&lt;p align=&#39;justify&#39;&gt; Position estimation of a multi-rotor UAV using a depth camera &lt;/p&gt;" loading="lazy">
+              alt="&lt;p align=&#39;justify&#39;&gt; Aerial Vehicle Localization Using a Downward-Facing Depth Camera for Precision Agriculture &lt;/p&gt;" loading="lazy">
 
 
     </div>
@@ -2253,7 +2253,7 @@
 
 
 
-          <img src="/research_projects/7_jewell_segmentation/jewell_segment_hu69b1b0d499506c45937c2838b09e26c5_157672_540x0_resize_q75_h2_lanczos_3.webp" height="218" width="540"
+          <img src="/research_projects/7_jewell_segmentation/jewell_segment_hu69b1b0d499506c45937c2838b09e26c5_157672_540x0_resize_q75_h2_lanczos_3.webp" height="304" width="540"
               alt="Jewellery segmentation" loading="lazy">
 
 
@@ -3119,7 +3119,7 @@
 
 
 
-          <img src="/extra_project/3_facegen/face_gen_hu7fbb502e03c24641461dafa16c016e1f_58713_720x2500_fit_q75_h2_lanczos_3.webp" height="304" width="540"
+          <img src="/extra_project/3_facegen/face_gen_hu7fbb502e03c24641461dafa16c016e1f_58713_540x0_resize_q75_h2_lanczos_3.webp" height="304" width="540"
               alt="&lt;p align=&#39;justify&#39;&gt; Face generation &lt;/p&gt;" loading="lazy">
 
 
@@ -3239,7 +3239,7 @@
 
 
 
-          <img src="/extra_project/2_foodorder/2_foodapp.gif" height="540" width="540"
+          <img src="/extra_project/2_foodorder/2_foodapp.gif" height="304" width="540"
               alt="&lt;p align=&#39;justify&#39;&gt; Food Ordering App &lt;/p&gt;" loading="lazy">
 
 
