--- a/project/index.html
+++ b/project/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!-- This site was created with Wowchemy. https://www.wowchemy.com -->
-<!-- Last Published: April 21, 2025 --><html lang="en-us" >
+<!-- Last Published: May 2, 2025 --><html lang="en-us" >
 
 
 <head>
@@ -781,7 +781,7 @@
     
     <a href="/project/9_flvis/"  class="summary-link">
       <div class="article-style">
-        In this project at TIH, IIT-Bombay , we evaluated visual inertial odometry (VIO) systems for robot pose estimation based on Experimental Evaluation of VIO Systems for Arable Farming paper. In VIO systems, camera captures rich information of the scene at a low frame rate whilst IMU gets motion information at a high rate.
+        Side-by-Side Figures with Links In this project at TIH, IIT-Bombay , we evaluated visual inertial odometry (VIO) systems for robot pose estimation based on Experimental Evaluation of VIO Systems for Arable Farming paper.
       </div>
     </a>
     
